--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>WebProject</title>
+  <title>ClinicSoftPeru</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -12,14 +12,15 @@
   <link rel="stylesheet" href="assets/fontawesome/css/solid.css" />
 
   <!-- ESTILOS DEL -->
-  <link rel="stylesheet" href="assets/css/theme.min.css?v=1.0" />
-  <link rel="stylesheet" href="assets/css/vendor.min.css" />
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="assets/css/argon-dashboard.min.css?v=2.0.2" />
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
 
-  <script src="assets/js/jquery.min.js"></script>
-  <script src="assets/js/theme.min.js"></script>
-  <script src="assets/js/vendor.min.js"></script>
+  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
+  <script src="assets/js/argon-dashboard.min.js?v=2.0.2"></script>
 </body>
 </html>
